# system-config-printer

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  AdvancedServerSettings.py  ChangeLog  ChangeLog-OLD  GroupsPane.py  GroupsPaneModel.py  HIG.py  Makefile  Makefile.am  Makefile.in  NEWS  OpenPrintingRequest.py  PhysicalDevice.py  README  README.md  SearchCriterion.py  TODO  ToolbarSearchEntry.py  XmlHelper.py  aclocal.m4  applet.glade  applet.py  asyncconn.py  asyncipp.py  asyncpk0.py  asyncpk1.py  authconn.py  bootstrap  branches  check-device-ids.py  config.py.in  configure.ac  configure.in  contextmenu.py  cupsd.py  cupshelpers.py  cupspk.py  (+71 more)
.github/workflows/: differential-shellcheck.yml
.tx/: config
0.7.74.x/: applet.glade  bootstrap  cupsd.py  my-default-printer.py  newprinternotification.conf  optionwidgets.py  system-config-printer  system-config-printer.desktop.in
0.7.74.x/po/: Makevars  POTFILES.in  ar.po  as.po  bg.po  bn_IN.po  ca.po  cs.po  cy.po  es.po  fa.po  hi.po  hr.po  hu.po  it.po  ka.po  kn.po  ko.po  lv.po  ml.po  mr.po  ms.po  nl.po  or.po  pa.po  pl.po  ro.po  sk.po  sl.po  sr.po  ta.po  te.po  vi.po  zh_TW.po
cupshelpers/: __init__.py  config.py.in  cupshelpers.py  installdriver.py  meson.build  openprinting.py  ppds.py  xmldriverprefs.py
cupshelpers.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
data/: system-config-printer.appdata.xml.in
dbus/: com.redhat.NewPrinterNotification.conf  com.redhat.PrinterDriversInstaller.conf  meson.build  org.fedoraproject.Config.Printing.service.in  org.fedoraproject.Config.Printing.xml  scp-dbus-service.in
glade/: ConnectDialog.glade  ConnectingDialog.glade  IPPBrowseDialog.glade  JobsWindow.glade  NewPrinterName.glade  NewPrinterWindow.glade  PrinterPropertiesDialog.glade  PrintersWindow.glade  RenameDialog.glade  SMBBrowseDialog.glade  ServerSettingsDialog.glade  job_popupmenu.glade  printer_context_menu.glade  statusicon_popupmenu.glade
man/: meson.build  system-config-printer.xml
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  af.po  am.po  ar.po  as.po  ast.po  bal.po  be.po  bg.po  bn.po  bn_IN.po  bo.po  br.po  brx.po  bs.po  ca.po  cs.po  cy.po  da.po  de.po  de_CH.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_orig.po  fur.po  gl.po  gu.po  he.po  hi.po  hr.po  (+66 more)
test/: test-cups-driver.py
troubleshoot/: CheckLocalServerPublishing.py  CheckNetworkServerSanity.py  CheckPPDSanity.py  CheckPrinterSanity.py  CheckSELinux.py  CheckUSBPermissions.py  ChooseNetworkPrinter.py  ChoosePrinter.py  DeviceListed.py  ErrorLogCheckpoint.py  ErrorLogFetch.py  ErrorLogParse.py  LocalOrRemote.py  Locale.py  NetworkCUPSPrinterShared.py  PrintTestPage.py  PrinterStateReasons.py  QueueNotEnabled.py  QueueRejectingJobs.py  RemoteAddress.py  SchedulerNotRunning.py  ServerFirewalled.py  Shrug.py  VerifyPackages.py  Welcome.py  __init__.py  base.py
udev/: .gitignore  70-printers.rules  com.redhat.PrinterConfig.conf  com.redhat.PrinterConfig.service.in  com.redhat.PrinterConfig.xml  configure-printer@.service.in  printer-config-daemon.c  printer-config-main.c  printer-config.h  udev-add-printer  udev-configure-printer.c  udev-configure-printer.service.in  udev-usb-printer.c
ui/: AboutDialog.glade  AboutDialog.ui  AvahiWarningDialog.ui  ConnectDialog.glade  ConnectDialog.ui  ConnectingDialog.glade  ConnectingDialog.ui  DiscoveredPrintersDialog.ui  InstallDialog.glade  InstallDialog.ui  JobsWindow.glade  JobsWindow.ui  NewPrinterName.glade  NewPrinterName.ui  NewPrinterWindow.glade  NewPrinterWindow.ui  PrinterItem.ui  PrinterPropertiesDialog.glade  PrinterPropertiesDialog.ui  PrinterStatusWindow.glade  PrintersWindow.glade  PrintersWindow.ui  SMBBrowseDialog.glade  SMBBrowseDialog.ui  ServerSettingsDialog.glade  ServerSettingsDialog.ui  WaitWindow.glade  WaitWindow.ui  printer_context_menu.glade  remove-gtkalignment.xsl  statusicon_popupmenu.glade  statusicon_popupmenu.ui
xml/: drivertypes.rng  drivertypes.xml  preferreddrivers.rng  preferreddrivers.xml  validate.py
